<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/profileTextId"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:text="@string/my_profile"
        android:textSize="12pt"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintHeight_percent=".05"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintLeft_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>


    <FrameLayout
        android:id="@+id/profileLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintHeight_percent=".25"
        app:layout_constraintHeight_default="percent"

        android:background="@color/colorPrimaryDark"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintLeft_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profileTextId">


        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="20dp"
            android:layout_gravity="center"
            android:src="@drawable/custom_avatar"/>
            />

    </FrameLayout>

    <LinearLayout
        android:id="@+id/profileInfo"
        android:layout_width="match_parent"
        android:layout_height="0pt"
        app:layout_constraintHeight_percent=".12"
        app:layout_constraintHeight_default="percent"
        android:orientation="vertical"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintLeft_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profileLayout">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/age"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/specialization"
            android:textSize="20sp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/tabs"
        android:layout_width="match_parent"
        android:layout_height="0pt"
        app:layout_constraintHeight_percent=".03"
        app:layout_constraintHeight_default="percent"
        android:orientation="horizontal"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintLeft_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profileInfo">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="18sp"
            android:text="@string/Photo" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="18sp"
            android:text="@string/Projects" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="18sp"
            android:text="@string/Achivments" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="18sp"
            android:text="@string/Other" />
    </LinearLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="0pt"
        app:layout_constraintHeight_percent=".54"
        app:layout_constraintHeight_default="percent"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintLeft_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tabs">

        <TableRow
            android:layout_weight="1">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_weight="1"
                app:srcCompat="@android:drawable/ic_menu_gallery" />

            <ImageView
                android:id="@+id/imageView4"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_weight="1"
                app:srcCompat="@android:drawable/ic_menu_gallery" />

            <ImageView
                android:id="@+id/imageView5"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_weight="1"
                app:srcCompat="@android:drawable/ic_menu_gallery" />
        </TableRow>

        <TableRow
            android:layout_weight="1">

            <ImageView
                android:id="@+id/imageView6"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_weight="1"
                app:srcCompat="@android:drawable/ic_menu_gallery" />

            <ImageView
                android:id="@+id/imageView7"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_weight="1"
                app:srcCompat="@android:drawable/ic_menu_gallery" />

            <ImageView
                android:id="@+id/imageView8"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_weight="1"
                app:srcCompat="@android:drawable/ic_menu_gallery" />
        </TableRow>

    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>